fix: token 验证 和 session验证切换
